# bmad-dependencies-lean

./: CMakeLists.txt  README.md  build-deps.sh  lapack95.cmake  patch-lapack95.sh  plplot-5.15.0.patch
